a lot of changes

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,5 +8,6 @@
 @import 'styles/core/typography';
 
 // pages and components
-@import 'styles/screens/App';
+@import 'styles/screens/Root';
 @import 'styles/components/UI/button';
+@import 'styles/components/UI/header';
