--- a/src/styles/components/UI/button.scss
+++ b/src/styles/components/UI/button.scss
@@ -1,14 +1,20 @@
 .btn {
   height: 5rem;
-  background-color: color('yellow');
   text-transform: uppercase;
+  background-color: color('yellow');
+  border: solid 0.1rem transparent;
 
   &:hover {
     background-color: color('white');
-    border: solid 0.1rem color('yellow');
+    border-color: color('yellow');
   }
 
-  &.rounded {
+  &--outline {
+    background-color: color('white');
+    border-color: color('yellow');
+  }
+
+  &--rounded {
     border-radius: 0.4rem;
   }
 }
